// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should render snapshot input dark 1`] = `
<DocumentFragment>
  <input
    class="rounded w-full h-10 my-1.5 text-indent bg-black border border-button indent-1"
    name=""
    placeholder=""
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`<Input /> should render snapshot input light 1`] = `
<DocumentFragment>
  <input
    class="rounded w-full h-10 my-1.5 text-black indent-1"
    name=""
    placeholder=""
    type="text"
    value=""
  />
</DocumentFragment>
`;
